fix: updating z-index for gitter chat elements

--- a/src/main/webapp/content/css/loading.css
+++ b/src/main/webapp/content/css/loading.css
@@ -1,3 +1,10 @@
+.gitter-chat-embed {
+  z-index: 99998;
+}
+.gitter-open-chat-button {
+  z-index: 99999;
+}
+
 .app-loading {
   margin: 100px auto;
   width: 40px;
